chore(lint): обновлены скрипты и зависимости eslint
Добавлены новые lint-скрипты (`lint`, `lint:fix`) и расширен список eslint-плагинов.
Обновлены опции TypeScript-компилятора: отключена проверка неиспользуемых параметров и удалён флаг `noUnusedImports` как некорректный.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noUnusedImports": true,
+    "noUnusedParameters": false,
     "module": "commonjs",
     "declaration": true,
     "removeComments": true,
